<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="appName">HydroMemo</string>
    <string name="NONE">#</string>
    <string name="aboutName">About HydroMemo</string>
    <string name="aboutAuthorName">Markus Bösling</string>
    <string name="aboutAuthorEmail">markus@boesling.de</string>
    <string name="helpName">Help</string>
    <string name="helpText1">The HydroMemo app tries to help you drink enough water.</string>
    <string name="helpText2">You can switch the reminder on and off.</string>
    <string name="helpText3">Choose a name to give the reminder a personal touch.</string>
    <string name="helpText4">You can change the begin, the end and the interval of the reminder.</string>
    <string name="helpText5">You can disable the sound and the vibration.</string>
    <string name="helpText6">The Increment option increases the intensity if you ignore the reminder.</string>
	<string name="helpAdvice">To save battery power, the configured interval will not be handled very accurate.</string>
    <string name="notificationText">Please, drink some water!</string>
    <string name="cfgCommonNameKey">cfgCommonName</string>
    <string name="cfgCommonNameTitle">Name</string>
    <string name="cfgCommonNameDefaultValue">Name</string>
    <string name="cfgIncrementKey">cfgIncrementKey</string>
    <string name="cfgIncrementTitle">Increment</string>
    <bool name="cfgIncrementDefaultValue">false</bool>
    <string name="cfgIncrementSummaryOn">Reminder with increment</string>
    <string name="cfgIncrementSummaryOff">Reminder without increment</string>
    <string name="cfgReminderKey">cfgReminder</string>
    <string name="cfgReminderTitle">Reminder</string>
    <bool name="cfgReminderDefaultValue">true</bool>
    <string name="cfgReminderSummaryOn">Reminder is enabled</string>
    <string name="cfgReminderSummaryOff">Reminder is disabled</string>
    <string name="cfgSoundKey">cfgSoundKey</string>
    <string name="cfgSoundTitle">Sound</string>
    <bool name="cfgSoundDefaultValue">true</bool>
    <string name="cfgSoundSummaryOn">Reminder with sound</string>
    <string name="cfgSoundSummaryOff">Reminder without sound</string>
    <string name="cfgSwitchTextOn">on</string>
    <string name="cfgSwitchTextOff">off</string>
    <string name="cfgTimeStartKey">cfgTimeStart</string>
    <string name="cfgTimeStartTitle">Begin</string>
    <string name="cfgTimeStartDefaultValue">9</string>
    <string name="cfgTimeEndKey">cfgTimeEnd</string>
    <string name="cfgTimeEndTitle">End</string>
    <string name="cfgTimeEndDefaultValue">21</string>
    <string name="cfgTimeIntervalKey">cfgTimeInterval</string>
    <string name="cfgTimeIntervalTitle">Interval</string>
    <string name="cfgTimeIntervalDefaultValue">60</string>
    <string name="cfgVibrationKey">cfgVibrationKey</string>
    <string name="cfgVibrationTitle">Vibration</string>
    <bool name="cfgVibrationDefaultValue">true</bool>
    <string name="cfgVibrationSummaryOn">Reminder with vibration</string>
    <string name="cfgVibrationSummaryOff">Reminder without vibration</string>
    
</resources>