<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <SwitchPreference
        android:defaultValue="@bool/cfgReminderDefaultValue"
        android:key="@string/cfgReminderKey"
        android:summaryOff="@string/cfgReminderSummaryOff"
        android:summaryOn="@string/cfgReminderSummaryOn"
        android:switchTextOff="@string/cfgSwitchTextOff"
        android:switchTextOn="@string/cfgSwitchTextOn"
        android:title="@string/cfgReminderTitle" />

    <de.boesling.hydromemo.preferences.EditTextPreferenceShowSummary
        android:dependency="@string/cfgReminderKey"
        android:hint="@string/cfgCommonNameDefaultValue"
        android:inputType="textCapWords"
        android:key="@string/cfgCommonNameKey"
        android:summary="@string/cfgCommonNameDefaultValue"
        android:title="@string/cfgCommonNameTitle" />

    <de.boesling.hydromemo.preferences.ListPreferenceShowSummary
        android:defaultValue="@string/cfgTimeStartDefaultValue"
        android:dependency="@string/cfgReminderKey"
        android:entries="@array/cfgTimeEntries"
        android:entryValues="@array/cfgTimeEntryValues"
        android:key="@string/cfgTimeStartKey"
        android:summary="@string/cfgTimeStartDefaultValue"
        android:title="@string/cfgTimeStartTitle" />
    <de.boesling.hydromemo.preferences.ListPreferenceShowSummary
        android:defaultValue="@string/cfgTimeEndDefaultValue"
        android:dependency="@string/cfgReminderKey"
        android:entries="@array/cfgTimeEntries"
        android:entryValues="@array/cfgTimeEntryValues"
        android:key="@string/cfgTimeEndKey"
        android:summary="@string/cfgTimeEndDefaultValue"
        android:title="@string/cfgTimeEndTitle" />
    <de.boesling.hydromemo.preferences.ListPreferenceShowSummary
        android:defaultValue="@string/cfgTimeIntervalDefaultValue"
        android:dependency="@string/cfgReminderKey"
        android:entries="@array/cfgTimeIntervalEntries"
        android:entryValues="@array/cfgTimeIntervalEntryValues"
        android:key="@string/cfgTimeIntervalKey"
        android:summary="@string/cfgTimeIntervalDefaultValue"
        android:title="@string/cfgTimeIntervalTitle" />

    <SwitchPreference
        android:defaultValue="@bool/cfgSoundDefaultValue"
        android:dependency="@string/cfgReminderKey"
        android:key="@string/cfgSoundKey"
        android:summaryOff="@string/cfgSoundSummaryOff"
        android:summaryOn="@string/cfgSoundSummaryOn"
        android:switchTextOff="@string/cfgSwitchTextOff"
        android:switchTextOn="@string/cfgSwitchTextOn"
        android:title="@string/cfgSoundTitle" />
    <SwitchPreference
        android:defaultValue="@bool/cfgVibrationDefaultValue"
        android:dependency="@string/cfgReminderKey"
        android:key="@string/cfgVibrationKey"
        android:summaryOff="@string/cfgVibrationSummaryOff"
        android:summaryOn="@string/cfgVibrationSummaryOn"
        android:switchTextOff="@string/cfgSwitchTextOff"
        android:switchTextOn="@string/cfgSwitchTextOn"
        android:title="@string/cfgVibrationTitle" />
    <SwitchPreference
        android:defaultValue="@bool/cfgIncrementDefaultValue"
        android:dependency="@string/cfgReminderKey"
        android:key="@string/cfgIncrementKey"
        android:summaryOff="@string/cfgIncrementSummaryOff"
        android:summaryOn="@string/cfgIncrementSummaryOn"
        android:switchTextOff="@string/cfgSwitchTextOff"
        android:switchTextOn="@string/cfgSwitchTextOn"
        android:title="@string/cfgIncrementTitle" />
    
</PreferenceScreen>