<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="12dp"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/helpTextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/helpText1"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/helpTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/helpText2"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/helpTextView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/helpText3"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/helpTextView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/helpText4"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/helpAdviceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/helpAdvice"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</LinearLayout>